Fix header alignment issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,18 +35,3 @@
  img {
    width: 100%
  }
-
-button {
-  background-color: blue;
-	border-color: black;
-  background-color: transparent;
-	color: black;
-	font-weight: bold;
-	padding: 7px 9px;
-  font-family: GT America,Helvetica Neue,Helvetica,Arial,sans-serif;
-	border-radius: 3px;
-	transition: background-color 0.3s;
-	font-family: sans-serif;
-	font-size: 10px;
-	text-align: center;
-}
